--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kyle's Portfolio</title>
+  <title>Document</title>
   <link rel="stylesheet" href="./reset.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -24,21 +24,12 @@
     background-color: rgba(52, 58, 64, 1);
   }
 
-  #nightBgContainer {
-    background-color: rgb(90, 98, 105);
-    color: blanchedalmond;
-    border-radius: 25px;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-  }
-
   #padding {
     color: blanchedalmond;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left:10px;
+    padding-right:10px;
   }
+
 </style>
 
 <body id="nightBg">
@@ -67,29 +58,36 @@
       <p class="lead">Welcome to my portfolio page!</p>
     </div>
   </div>
+  
 
-  <div class="container">
-    <div class="row">
-      <div class="col-md-7" id="nightBgContainer">
-        <h1>About Me</h1>
-        <span>I am a web developer. I don't have any major projects right now, but thanks for visiting and make sure to
-          check back later as I add to my project portfolio!</span>
-      </div>
 
-      <div class="col-md-1"><br></div>
+  <div class="row">
+    <div class="col-md-3"></div>
 
-      <div class="col-md-4" id="nightBgContainer">
-        <h2>Experience</h2>
-        <ul>
-          <li>UCI Coding Boot Camp (in progress)</li>
-          <li>AP Computer Science</li>
-          <li>Java (1 year)</li>
-          <li>Python (0.5 years)</li>
-          <li>HTML, CSS (1 year)</li>
-        </ul>
-      </div>
+    <div class="col-md-6" id="padding">
+      <h1>Contact Me</h1>
+      <form>
+        <div class="form-group" id="padding">
+          <label for="exampleFormControlInput1">Name</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Enter name here...">
+        </div>
+
+        <div class="form-group" id="padding">
+          <label for="exampleFormControlInput1">E-mail address</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        </div>
+
+        <div class="form-group" id="padding">
+          <label for="exampleFormControlTextarea1">Type message here...</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="8"></textarea>
+        </div>
+      </form>
     </div>
+
+    <div class="col-md-3"></div>
   </div>
+
+
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
